Fixed Bug With Nav Links Not Responding Because Of Z-index

--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,8 @@ header .container .left a {
     gap: 20px;
     color: black;
     transition: 0.3s;
+    position: relative;
+    z-index: 999;
 }
 
 header .container .left a:hover h3 {
@@ -67,6 +69,8 @@ header .container .left h3 {
 header nav {
     display: flex;
     align-items: center;
+    position: relative;
+    z-index: 999;
 }
 
 header nav a {
@@ -118,7 +122,7 @@ header nav a:last-of-type:hover {
 }
 
 .about .about-me h1:nth-of-type(2) {
-    font-size: 55px;
+    font-size: 50px;
     margin: 0 0 15px;
 }
 
@@ -158,6 +162,8 @@ header nav a:last-of-type:hover {
     margin: 30px 0;
     display: flex;
     gap: 15px;
+    position: relative;
+    z-index: 999;
 }
 
 .about .about-me .social-links a i {
@@ -205,7 +211,7 @@ header nav a:last-of-type:hover {
 }
 
 .scroll-skills .container .scroll-bar div {
-    animation: skills 13s linear infinite;
+    animation: skills 17s linear infinite;
 }
 
 @keyframes skills {
@@ -233,14 +239,19 @@ header nav a:last-of-type:hover {
     .about .container .about-me {
         text-align: center;
     }
-
+    
     .about .about-me .buttons a:first-child {
         margin: 0 0 10px 0;
     }
-
+    
     .about .about-me .social-links {
         justify-content: center;
     }
+    
+        .about .container .hero-picture {
+            max-height: 320px !important;
+            min-height: 300px;
+        }
 }
 
 @media (min-width: 769px) {
